# FaceCrop

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  Makefile  PRACTICAL_IMPROVEMENTS.md  README.md  SCALING_PLAN.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
docs/: uv-performance.md
scripts/: test-all.sh
src/facecrop/: __init__.py  __main__.py  cli.py  core.py
tests/: __init__.py  test_cli.py  test_core.py
