[project]
name = "facecrop"
version = "0.1.0"
description = "Face-centered intelligent image resizing CLI tool"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "opencv-python>=4.8.0",
    "dlib>=19.24.0",
    "Pillow>=10.0.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
]

[project.scripts]
facecrop = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
